Fix overflow

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -102,6 +102,7 @@ html, body {
     overflow-x: hidden;
     background: black;
     color: #eeeaee;
+    max-height: 93.5%;
 }
 .body::selection, .body *::selection {
     color: #333133;
